--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "devDependencies": {
     "gpii-express":       "git://github.com/the-t-in-rtf/gpii-express",
+    "grunt": "~0.4.4",
+    "grunt-shell": "0.6.4",
+    "grunt-contrib-jshint": "~0.9.0",
+    "grunt-jsonlint": "1.0.4",
+    "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#a4aca06cbaf7523eb1af56ed65ce6bd30b8ec325",
     "jqUnit":             "git://github.com/fluid-project/node-jqUnit.git#e9bf72445bd343a4f3aabe3ba96a1087d3498612",
     "request":            "2.51.0",
     "tough-cookie":       "0.12.1",
