--- a/bower.json
+++ b/bower.json
@@ -16,15 +16,16 @@
     "./src/js/common/fluid-hb-common.js"
   ],
   "ignore": [
-      "**/.*",
-      "bower_components",
-      "node_modules",
-      "test",
-      "tests"
+    "**/.*",
+    "bower_components",
+    "node_modules",
+    "test",
+    "tests"
   ],
   "dependencies": {
     "handlebars": "~2.0.0",
     "jquery": "~2.1.3",
-    "pagedown": "~1.1.0"
+    "pagedown": "~1.1.0",
+    "foundation": "~5.5.2"
   }
 }
