--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "test": "node tests/js/all-tests.js",
+    "test": "node tests/all-tests.js",
     "postinstall": "grunt dedupe-infusion"
   },
   "dependencies": {
