--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "gpii-handlebars",
   "version": "0.0.0",
   "private": true,
+  "license": "BSD-3-Clause",
+  "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
     "test": "node tests/all-tests.js",
     "postinstall": "grunt dedupe-infusion"
   },
   "dependencies": {
     "express-handlebars": "1.1.0",
+    "grunt": "~0.4.4",
+    "grunt-shell": "0.6.4",
+    "grunt-contrib-jshint": "~0.9.0",
+    "grunt-jsonlint": "1.0.4",
+    "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
     "handlebars": "2.0.0",
     "infusion": "git://github.com/fluid-project/infusion.git#605b0bcfaedf6193c31456236d3aa4e42cf36a96",
     "marked": "0.3.2",
@@ -17,11 +24,6 @@
   },
   "devDependencies": {
     "gpii-express": "git://github.com/GPII/gpii-express.git#15ca01ce800a889bdccbfe6ba0a5363f9a0e64e9",
-    "grunt": "~0.4.4",
-    "grunt-shell": "0.6.4",
-    "grunt-contrib-jshint": "~0.9.0",
-    "grunt-jsonlint": "1.0.4",
-    "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
     "jqUnit": "git://github.com/fluid-project/node-jqUnit.git#e9bf72445bd343a4f3aabe3ba96a1087d3498612",
     "request": "2.51.0",
     "tough-cookie": "0.12.1",
