--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "grunt-jsonlint": "1.0.4",
     "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
     "handlebars": "2.0.0",
-    "infusion": "git://github.com/fluid-project/infusion.git#605b0bcfaedf6193c31456236d3aa4e42cf36a96",
+    "infusion": "git://github.com/fluid-project/infusion.git#282f1a318718eed0b0ec060fb8b4ad254417fd7e",
     "marked": "0.3.2",
     "pagedown": "1.1.0",
     "underscore-node": "0.1.2",
     "when": "^3.7.3"
   },
   "devDependencies": {
-    "gpii-express": "git://github.com/GPII/gpii-express.git#15ca01ce800a889bdccbfe6ba0a5363f9a0e64e9",
-    "jqUnit": "git://github.com/fluid-project/node-jqUnit.git#e9bf72445bd343a4f3aabe3ba96a1087d3498612",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express.git#60da9e215ecf1b39f894e5001eb3223000e78e45",
+    "jqUnit": "git://github.com/fluid-project/node-jqUnit.git#b7ef53aac1ca365bf23d35d255fae874faa88b70",
     "request": "2.51.0",
     "tough-cookie": "0.12.1",
     "zombie": "3.0.15"
