--- a/package.json
+++ b/package.json
@@ -6,18 +6,13 @@
   "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
     "test": "node tests/all-tests.js",
-    "postinstall": "grunt dedupe-infusion && bower install"
+    "postinstall": "bower install"
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#bc63bb7a8fe7e39b2aae20ce6c825daeb9cfcd58",
-    "grunt": "~0.4.4",
-    "grunt-shell": "0.6.4",
-    "grunt-contrib-jshint": "~0.9.0",
-    "grunt-jsonlint": "1.0.4",
-    "grunt-gpii": "git://github.com/GPII/grunt-gpii.git#58ae055833f437a9e91baedb9f39a22c5fdd727f",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#bac064166bac3d59bebdbfc2bb4b7c33eaafeca1",
     "handlebars": "4.0.0",
-    "infusion": "2.0.0-dev.20151113T224751Z.3ba00f2",
+    "infusion": "2.0.0-dev.20151211T025229Z.eabb4fc",
     "marked": "0.3.5",
     "pagedown": "1.1.0",
     "underscore-node": "0.1.2",
@@ -25,8 +20,12 @@
   },
   "devDependencies": {
     "node-jqunit": "~1.1.3",
+    "grunt": "~0.4.4",
+    "grunt-shell": "0.6.4",
+    "grunt-contrib-jshint": "~0.9.0",
+    "grunt-jsonlint": "1.0.4",
     "jsdom": "3.1.2",
-    "kettle": "git://github.com/amb26/kettle.git#c7207e93518b3c61cb6e923f22b1e26f2c365f64",
+    "kettle": "git://github.com/amb26/kettle.git#2517cc1d9d047d58aef70db48d1580da718ffc16",
     "request": "2.51.0",
     "tough-cookie": "0.12.1",
     "zombie": "3.0.15"
