--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "infusion": "2.0.0-dev.20151211T025229Z.eabb4fc",
     "marked": "0.3.5",
     "pagedown": "1.1.0",
-    "underscore-node": "0.1.2",
-    "when": "^3.7.3"
+    "underscore-node": "0.1.2"
   },
   "devDependencies": {
     "node-jqunit": "~1.1.3",
+    "gpii-test-browser": "git://github.com/the-t-in-rtf/gpii-test-browser#68ebbc6ba5039607fb7f432ba0735f69030bc620",
     "grunt": "~0.4.4",
     "grunt-shell": "0.6.4",
     "grunt-contrib-jshint": "~0.9.0",
@@ -27,7 +27,6 @@
     "jsdom": "3.1.2",
     "kettle": "git://github.com/amb26/kettle.git#2517cc1d9d047d58aef70db48d1580da718ffc16",
     "request": "2.51.0",
-    "tough-cookie": "0.12.1",
-    "zombie": "3.0.15"
+    "tough-cookie": "0.12.1"
   }
 }
