--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express.git#ded2eca3853c8a572c955a8dd17ac4cc6366f6b3",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#4d0314d123ccc543da41a4cd1fc5471d4260e24a",
     "handlebars": "4.0.5",
     "infusion": "2.0.0-dev.20151211T025229Z.eabb4fc",
     "marked": "0.3.5",
