--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
     "test": "node tests/all-tests.js",
-    "postinstall": "bower install"
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
@@ -19,14 +19,15 @@
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
-    "node-jqunit": "~1.1.3",
+    "bower": "1.7.9",
     "gpii-test-browser": "git://github.com/the-t-in-rtf/gpii-test-browser#c6d0b70366acd2b64a91289ab2ddaa42994e4abf",
     "grunt": "~0.4.4",
-    "grunt-shell": "0.6.4",
     "grunt-contrib-jshint": "~0.9.0",
     "grunt-jsonlint": "1.0.4",
+    "grunt-shell": "0.6.4",
     "jsdom": "3.1.2",
     "kettle": "git://github.com/amb26/kettle.git#2517cc1d9d047d58aef70db48d1580da718ffc16",
+    "node-jqunit": "~1.1.3",
     "request": "2.51.0",
     "tough-cookie": "0.12.1"
   }
