GPII-1810:  Created a "standalone" client-side renderer.

--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,6 @@
   "dependencies": {
     "handlebars": "4.0.5",
     "pagedown": "1.1.0",
-    "foundation-sites": "~6.2.1"
+    "foundation": "5.5.2"
   }
 }
