GPII-1810:  Added code coverage harness to `npm test`.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "BSD-3-Clause",
   "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
-    "test": "node tests/all-tests.js",
+    "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js",
     "postinstall": "bower install"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "grunt-contrib-jshint": "~0.9.0",
     "grunt-jsonlint": "1.0.4",
     "grunt-shell": "0.6.4",
+    "istanbul": "0.4.3",
     "jsdom": "3.1.2",
     "kettle": "git://github.com/amb26/kettle.git#d808f3d5e326265aab9aaa1014703d75fa8ef0d0",
     "node-jqunit": "~1.1.3",
