--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "bower": "1.7.2",
     "express-handlebars": "1.2.2",
-    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#89f8d1b2870e521e9053bd674ccc3f3cdb431e6c",
-    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#84279ed065b0429eb71b7f13a17916353362263a",
+    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#f1ade44e0be4990a2400e54061a5557e634a13a8",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#52b1701d46868eeb3943d6d85bba09eba47938ce",
     "handlebars": "4.0.5",
     "infusion": "2.0.0-dev.20160519T222603Z.754d2c6",
     "marked": "0.3.5",
@@ -20,15 +20,15 @@
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
-    "gpii-test-browser": "git://github.com/the-t-in-rtf/gpii-test-browser#2d03d8571f51e778178e3c4c546b44669aa54313",
-    "grunt": "~0.4.4",
-    "grunt-contrib-jshint": "~0.9.0",
+    "eslint": "2.11.1",
+    "gpii-test-browser": "git://github.com/the-t-in-rtf/gpii-test-browser#bb64399e45417baa18aa943b8e98ef6e0f50b321",
+    "grunt": "1.0.1",
+    "grunt-eslint": "18.1.0",
     "grunt-jsonlint": "1.0.4",
-    "grunt-shell": "0.6.4",
     "istanbul": "0.4.3",
     "jsdom": "3.1.2",
     "kettle": "git://github.com/amb26/kettle.git#d808f3d5e326265aab9aaa1014703d75fa8ef0d0",
-    "node-jqunit": "~1.1.3",
+    "node-jqunit": "1.1.4",
     "request": "2.51.0",
     "tough-cookie": "0.12.1"
   }
