--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ env:
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+    - ubuntu-toolchain-r-test
     packages:
-      - g++-4.8
-       - xvfb
+    - g++-4.8
+    - gcc-4.8
+    - xvfb
 install:
   - export DISPLAY=':99.0'
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
