GPII-1837: Migrated client-side dependencies from `bower` to `npm`.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bower": "1.7.2",
     "express-handlebars": "1.2.2",
+    "foundation": "4.2.1-1",
     "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#f1ade44e0be4990a2400e54061a5557e634a13a8",
     "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#52b1701d46868eeb3943d6d85bba09eba47938ce",
     "handlebars": "4.0.5",
