--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "BSD-3-Clause",
   "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
-    "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js",
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
   },
   "dependencies": {
     "bower": "1.7.2",
