--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
   "dependencies": {
     "express-handlebars": "1.2.2",
     "foundation": "4.2.1-1",
-    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#f1ade44e0be4990a2400e54061a5557e634a13a8",
-    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#52b1701d46868eeb3943d6d85bba09eba47938ce",
+    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#5435124165ed02d85920c61ae75cfbe0446f87fe",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#2f224862730bca57fa1f036f24f26e1d43748419",
     "handlebars": "4.0.5",
     "infusion": "2.0.0-dev.20160519T222603Z.754d2c6",
-    "marked": "0.3.5",
+    "marked": "0.3.6",
     "pagedown": "1.1.0",
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
-    "eslint": "2.11.1",
+    "eslint": "3.2.2",
     "gpii-test-browser": "git://github.com/the-t-in-rtf/gpii-test-browser#bb64399e45417baa18aa943b8e98ef6e0f50b321",
+    "gpii-webdriver": "git://github.com/the-t-in-rtf/gpii-webdriver#88d3628528ddffbee532fb84fcab4772e9c0c2a8",
     "grunt": "1.0.1",
-    "grunt-eslint": "18.1.0",
-    "grunt-jsonlint": "1.0.4",
-    "istanbul": "0.4.3",
-    "jsdom": "3.1.2",
-    "kettle": "git://github.com/amb26/kettle.git#d808f3d5e326265aab9aaa1014703d75fa8ef0d0",
+    "fluid-grunt-eslint": "18.1.1",
+    "grunt-jsonlint": "1.1.0",
+    "istanbul": "0.4.4",
+    "jsdom": "9.4.1",
+    "kettle": "1.1.0",
     "node-jqunit": "1.1.4",
-    "request": "2.51.0",
-    "tough-cookie": "0.12.1"
+    "request": "2.74.0",
+    "tough-cookie": "2.3.1"
   }
 }
