--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "foundation": "4.2.1-1",
     "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#513066d82f20303e4745115f6d52d104bc359021",
     "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#baa1558d22ee7abcb6d6b6410af7cc95693f1b80",
     "handlebars": "4.0.5",
@@ -19,6 +18,7 @@
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
+    "foundation-sites": "6.2.3",
     "eslint": "3.3.1",
     "gpii-webdriver": "git://github.com/the-t-in-rtf/gpii-webdriver#4b4e405989c1007d7efb505e9e1ae8a6064787a3",
     "grunt": "1.0.1",
