--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ install:
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - npm install
 script:
-  - BROWSERS=firefox npm test
+  - BROWSERS=chrome npm test
