--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 env:
   - CXX=g++-4.8
 addons:
+  firefox: "47.0"
   apt:
     sources:
     - ubuntu-toolchain-r-test
@@ -16,4 +17,4 @@ install:
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - npm install
 script:
-  - BROWSERS=chrome npm test
+  - BROWSERS=firefox npm test
