--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#513066d82f20303e4745115f6d52d104bc359021",
-    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#baa1558d22ee7abcb6d6b6410af7cc95693f1b80",
-    "handlebars": "4.0.5",
-    "infusion": "git://github.com/the-t-in-rtf/infusion.git#056bd1a246fd63f0123fcd375db8f6b157e245b8",
+    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#61ff175ae762a15542b4e7af09cd1dd56f1a6222",
+    "gpii-express": "git://github.com/the-t-in-rtf/gpii-express#39c32a4b306640c7c92dd1a7acd6d5af3f37ddef",
+    "handlebars": "4.0.6",
+    "infusion": "2.0.0-dev.20161027T155641Z.0bcd507",
     "marked": "0.3.6",
     "pagedown": "1.1.0",
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
-    "foundation-sites": "6.2.3",
-    "eslint": "3.3.1",
-    "gpii-webdriver": "git://github.com/the-t-in-rtf/gpii-webdriver#4b4e405989c1007d7efb505e9e1ae8a6064787a3",
-    "grunt": "1.0.1",
+    "eslint": "3.10.2",
+    "eslint-config-fluid": "1.0.0",
     "fluid-grunt-eslint": "18.1.2",
+    "foundation-sites": "6.2.4",
+    "gpii-webdriver": "git://github.com/the-t-in-rtf/gpii-webdriver#7e1d3d913d9df61423809a5f2bb7182389c9efc6",
+    "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
-    "jsdom": "9.4.2",
-    "kettle": "1.1.0",
+    "jsdom": "9.8.3",
+    "kettle": "1.2.1",
     "node-jqunit": "1.1.4",
-    "request": "2.74.0",
-    "tough-cookie": "2.3.1"
+    "request": "2.79.0",
+    "tough-cookie": "2.3.2"
   }
 }
