--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-binder": "git://github.com/the-t-in-rtf/gpii-binder#61ff175ae762a15542b4e7af09cd1dd56f1a6222",
+    "gpii-binder": "1.0.0-dev.20161123T123137Z.a776add",
     "gpii-express": "1.0.0",
     "handlebars": "4.0.6",
     "infusion": "2.0.0-dev.20161027T155641Z.0bcd507",
@@ -22,12 +22,12 @@
     "eslint-config-fluid": "1.0.0",
     "fluid-grunt-eslint": "18.1.2",
     "foundation-sites": "6.2.4",
-    "gpii-webdriver": "git://github.com/the-t-in-rtf/gpii-webdriver#b4540371d21c11700b3b13e73adb73c234634505",
+    "gpii-webdriver": "1.0.0-dev.20161124T133029Z.b454037",
     "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.8.3",
-    "kettle": "1.2.1",
+    "kettle": "1.2.2",
     "node-jqunit": "1.1.4",
     "request": "2.79.0",
     "tough-cookie": "2.3.2"
