NOJIRA:  Added `chromedriver` to dev dependencies and simplified QI steps.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
+    "chromedriver": "^2.25.2",
     "eslint": "^3.11.1",
     "eslint-config-fluid": "1.0.0",
     "fluid-grunt-eslint": "18.1.2",
