--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express-handlebars": "1.2.2",
     "gpii-binder": "1.0.0-dev.20161219T173834Z.5ecfb7b",
-    "gpii-express": "1.0.1",
+    "gpii-express": "1.0.1-dev.20170106T131203Z.a048e61",
     "handlebars": "4.0.6",
     "infusion": "2.0.0-dev.20161219T170555Z.5778f7e",
     "marked": "0.3.6",
@@ -23,12 +23,12 @@
     "eslint-config-fluid": "1.0.0",
     "fluid-grunt-eslint": "18.1.2",
     "foundation-sites": "6.2.4",
-    "gpii-webdriver": "1.0.0-dev.20161219T175107Z.5a2a1c1",
+    "gpii-webdriver": "1.0.0-dev.20170106T132630Z.34b5431",
     "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.8.3",
-    "kettle": "1.2.2",
+    "kettle": "1.3.0",
     "node-jqunit": "1.1.4",
     "request": "2.79.0",
     "tough-cookie": "2.3.2"
