--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express-handlebars": "1.2.2",
     "gpii-binder": "1.0.0-dev.20170127T144054Z.54a5ef2",
-    "gpii-express": "1.0.1-dev.20170127T142027Z.d7dabd6",
+    "gpii-express": "1.0.2",
     "handlebars": "4.0.6",
     "infusion": "3.0.0-dev.20170127T130413Z.103de6e",
     "marked": "0.3.6",
@@ -28,7 +28,7 @@
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.9.1",
-    "kettle": "1.3.0",
+    "kettle": "1.3.1",
     "node-jqunit": "1.1.4",
     "request": "2.79.0",
     "tough-cookie": "2.3.2"
