--- a/package.json
+++ b/package.json
@@ -5,35 +5,33 @@
   "license": "BSD-3-Clause",
   "repository": "https://github.com/GPII/gpii-handlebars",
   "scripts": {
-    "test": "snyk test && node node_modules/istanbul/lib/cli.js cover tests/all-tests.js",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "pretest": "node node_modules/rimraf/bin.js coverage/* reports/*",
+    "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-binder": "1.0.0-dev.20170127T144054Z.54a5ef2",
-    "gpii-express": "1.0.6-dev.20170410T073824Z.533a56f",
+    "gpii-binder": "1.0.1-dev.20170417T183445Z.982c172",
+    "gpii-express": "1.0.7-dev.20170417T134005Z.8acdf26",
     "handlebars": "4.0.6",
-    "infusion": "3.0.0-dev.20170127T130413Z.103de6e",
+    "infusion": "3.0.0-dev.20170322T234120Z.278de35",
     "marked": "0.3.6",
     "pagedown": "1.1.0",
-    "underscore-node": "0.1.2",
-    "snyk": "1.18.0"
+    "underscore-node": "0.1.2"
   },
   "devDependencies": {
     "eslint": "3.19.0",
     "eslint-config-fluid": "1.1.0",
     "fluid-grunt-eslint": "18.1.2",
     "foundation-sites": "6.3.1",
-    "gpii-webdriver": "1.0.0",
+    "gpii-webdriver": "1.0.1-dev.20170419T070217Z.ec78e63",
     "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.12.0",
-    "kettle": "1.4.0",
+    "kettle": "git://github.com/the-t-in-rtf/kettle#ae8462ae9f7169db72de89d6bbe0f7b1a12da657",
     "node-jqunit": "1.1.4",
     "request": "2.81.0",
+    "rimraf": "^2.6.1",
     "tough-cookie": "2.3.2"
-  },
-  "snyk": true
+  }
 }
