--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "express-handlebars": "1.2.2",
-    "gpii-binder": "1.0.1-dev.20170417T183445Z.982c172",
-    "gpii-express": "1.0.7-dev.20170419T081915Z.306d53d",
+    "gpii-binder": "1.0.1-dev.20170419T083947Z.c0abe9d",
+    "gpii-express": "1.0.7-dev.20170419T084255Z.1cfe9d8",
     "handlebars": "4.0.6",
     "infusion": "3.0.0-dev.20170322T234120Z.278de35",
     "marked": "0.3.6",
@@ -31,7 +31,7 @@
     "kettle": "git://github.com/the-t-in-rtf/kettle#ae8462ae9f7169db72de89d6bbe0f7b1a12da657",
     "node-jqunit": "1.1.4",
     "request": "2.81.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "2.6.1",
     "tough-cookie": "2.3.2"
   }
 }
