--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
   },
   "dependencies": {
-    "express-handlebars": "1.2.2",
-    "gpii-binder": "1.0.1-dev.20170419T083947Z.c0abe9d",
-    "gpii-express": "1.0.7-dev.20170419T084255Z.1cfe9d8",
+    "gpii-binder": "1.0.2",
+    "gpii-express": "1.0.7",
     "handlebars": "4.0.6",
     "infusion": "3.0.0-dev.20170322T234120Z.278de35",
     "marked": "0.3.6",
@@ -23,12 +22,12 @@
     "eslint-config-fluid": "1.1.0",
     "fluid-grunt-eslint": "18.1.2",
     "foundation-sites": "6.3.1",
-    "gpii-webdriver": "1.0.1-dev.20170419T070217Z.ec78e63",
+    "gpii-webdriver": "1.0.1",
     "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.12.0",
-    "kettle": "git://github.com/the-t-in-rtf/kettle#ae8462ae9f7169db72de89d6bbe0f7b1a12da657",
+    "kettle": "1.5.0",
     "node-jqunit": "1.1.4",
     "request": "2.81.0",
     "rimraf": "2.6.1",
