--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
   },
   "dependencies": {
+    "chokidar": "1.7.0",
     "gpii-binder": "1.0.2",
     "gpii-express": "1.0.7",
     "handlebars": "4.0.6",
@@ -28,7 +29,9 @@
     "istanbul": "0.4.5",
     "jsdom": "9.12.0",
     "kettle": "1.5.0",
+    "mock-fs": "4.4.1",
     "node-jqunit": "1.1.4",
+    "recursive-copy": "2.0.6",
     "request": "2.81.0",
     "rimraf": "2.6.1",
     "tough-cookie": "2.3.2"
