--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "chokidar": "1.7.0",
-    "gpii-binder": "1.0.3-dev.20170505T070144Z.9dc2d8c",
-    "gpii-express": "1.0.8",
+    "gpii-binder": "1.0.3",
+    "gpii-express": "1.0.9",
     "handlebars": "4.0.10",
-    "infusion": "3.0.0-dev.20170713T172705Z.330ed53",
+    "infusion": "3.0.0-dev.20170724T165035Z.eee50c1",
     "marked": "0.3.6",
     "md5": "2.2.1",
     "pagedown": "1.1.0",
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
-    "eslint": "4.2.0",
+    "eslint": "4.3.0",
     "eslint-config-fluid": "1.1.0",
     "fluid-grunt-eslint": "18.1.2",
     "foundation-sites": "6.4.1",
-    "gpii-webdriver": "1.0.1",
+    "gpii-webdriver": "1.0.2",
     "grunt": "1.0.1",
     "grunt-jsonlint": "1.1.0",
     "istanbul": "0.4.5",
     "jsdom": "9.12.0",
-    "kettle": "1.6.2",
-    "node-jqunit": "1.1.5",
+    "kettle": "1.6.4",
+    "mkdirp": "0.5.1",
+    "node-jqunit": "1.1.6",
     "recursive-copy": "2.0.6",
     "request": "2.81.0",
     "rimraf": "2.6.1",
