--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpii-handlebars",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "private": false,
   "license": "BSD-3-Clause",
   "repository": "https://github.com/GPII/gpii-handlebars",
@@ -14,9 +14,8 @@
     "gpii-express": "1.0.9",
     "handlebars": "4.0.10",
     "infusion": "3.0.0-dev.20170724T165035Z.eee50c1",
-    "marked": "0.3.6",
+    "markdown-it": "8.4.0",
     "md5": "2.2.1",
-    "pagedown": "1.1.0",
     "underscore-node": "0.1.2"
   },
   "devDependencies": {
