--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "gpii-handlebars",
-  "version": "1.1.0",
-  "private": false,
-  "license": "BSD-3-Clause",
-  "repository": "https://github.com/GPII/gpii-handlebars",
-  "scripts": {
-    "pretest": "node node_modules/rimraf/bin.js coverage/* reports/*",
-    "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
-  },
-  "dependencies": {
-    "chokidar": "1.7.0",
-    "gpii-binder": "1.0.3",
-    "gpii-express": "1.0.10",
-    "handlebars": "4.0.10",
-    "infusion": "3.0.0-dev.20170724T165035Z.eee50c1",
-    "markdown-it": "8.4.0",
-    "md5": "2.2.1",
-    "underscore-node": "0.1.2"
-  },
-  "devDependencies": {
-    "eslint": "4.7.2",
-    "eslint-config-fluid": "1.1.0",
-    "fluid-grunt-eslint": "18.1.2",
-    "foundation-sites": "6.4.1",
-    "gpii-webdriver": "1.0.2",
-    "grunt": "1.0.1",
-    "grunt-jsonlint": "1.1.0",
-    "istanbul": "0.4.5",
-    "jsdom": "11.2.0",
-    "kettle": "1.7.0",
-    "mkdirp": "0.5.1",
-    "node-jqunit": "1.1.7",
-    "recursive-copy": "2.0.6",
-    "request": "2.82.0",
-    "rimraf": "2.6.2",
-    "tough-cookie": "2.3.3"
-  }
+    "name": "gpii-handlebars",
+    "version": "1.1.0",
+    "private": false,
+    "license": "BSD-3-Clause",
+    "repository": "https://github.com/GPII/gpii-handlebars",
+    "scripts": {
+        "pretest": "node node_modules/rimraf/bin.js coverage/* reports/*",
+        "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
+    },
+    "dependencies": {
+        "chokidar": "1.7.0",
+        "gpii-binder": "1.0.3",
+        "gpii-express": "1.0.11",
+        "handlebars": "4.0.11",
+        "infusion": "3.0.0-dev.20171006T195039Z.a128358",
+        "markdown-it": "8.4.0",
+        "md5": "2.2.1",
+        "underscore-node": "0.1.2"
+    },
+    "devDependencies": {
+        "cheerio": "1.0.0-rc.2",
+        "eslint": "4.9.0",
+        "eslint-config-fluid": "1.1.0",
+        "fluid-grunt-eslint": "18.1.2",
+        "foundation-sites": "6.4.1",
+        "gpii-webdriver": "1.0.2",
+        "grunt": "1.0.1",
+        "grunt-jsonlint": "1.1.0",
+        "istanbul": "0.4.5",
+        "kettle": "1.7.0",
+        "mkdirp": "0.5.1",
+        "node-jqunit": "1.1.7",
+        "recursive-copy": "2.0.6",
+        "request": "2.83.0",
+        "rimraf": "2.6.2",
+        "tough-cookie": "2.3.3"
+    }
 }
