GPII-3079: Add linting plugins and fix linting errors in markdown.

--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
         "cheerio": "1.0.0-rc.2",
         "eslint": "4.11.0",
         "eslint-config-fluid": "1.2.0",
+        "eslint-plugin-markdown": "1.0.0-beta.6",
         "fluid-grunt-eslint": "18.1.2",
         "foundation-sites": "6.4.1",
+        "gpii-grunt-mdjson-lint": "1.0.0-dev.20171024T123903Z.3c91988",
         "gpii-webdriver": "1.0.2",
         "grunt": "1.0.1",
         "grunt-jsonlint": "1.1.0",
+        "grunt-markdownlint": "1.0.42",
         "istanbul": "0.4.5",
         "kettle": "1.7.1",
         "mkdirp": "0.5.1",
