--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ before_script:
 vagrant_up:
   stage: vagrant_up
   script:
+    - vagrant destroy -f
     - vagrant box update
     - vagrant up
   when: always
