Added GitLab CI commands to (hopefully) help debug VM startup problems.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ vagrant_up:
   stage: vagrant_up
   script:
     - VBoxManage --version
-    - ls -la ~/
+    - ls -la ~/VirtualBox\ VMs
     - vagrant box update
     - vagrant up
   when: always
