--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ vagrant_up:
   stage: vagrant_up
   script:
     - VBoxManage --version
-    - ls -la ~/VirtualBox\ VMs
+    - ls -la ~/boxes
     - vagrant box update
     - vagrant up
   when: always
