--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,7 @@ before_script:
 vagrant_up:
   stage: vagrant_up
   script:
-    - VBoxManage --version
-    - ls -la ~/boxes
+    - VBoxManage list
     - vagrant box update
     - vagrant up
   when: always
