--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ before_script:
 vagrant_up:
   stage: vagrant_up
   script:
-    - VBoxManage list
+    - VBoxManage list vms
     - vagrant box update
     - vagrant up
   when: always
