Initial commit of GitLab CI setup to branch, including minor tweak to coverage setting.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ vagrant_tests:
   stage: vagrant_tests
   script:
     - vagrant ci test
-  coverage: '/ Coverage summary .+/'
+  coverage: '/.+ Coverage summary .+/'
   artifacts:
     paths:
     - reports/
