--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ before_script:
 vagrant_up:
   stage: vagrant_up
   script:
+    - export DISPLAY=:0
     - vagrant box update
     - vagrant up
   when: always
@@ -34,6 +35,7 @@ vagrant_up:
 vagrant_tests:
   stage: vagrant_tests
   script:
+    - export DISPLAY=:0
     - vagrant ci test
   coverage: '/.+ Coverage summary .+/'
   artifacts:
