--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "node node_modules/istanbul/lib/cli.js cover tests/all-tests.js"
     },
     "dependencies": {
-        "chokidar": "2.0.3",
+        "chokidar": "2.0.4",
         "gpii-binder": "1.0.3",
         "gpii-express": "1.0.14",
         "handlebars": "4.0.11",
@@ -21,24 +21,20 @@
     },
     "devDependencies": {
         "cheerio": "1.0.0-rc.2",
-        "eslint": "4.19.1",
+        "eslint": "5.1.0",
         "eslint-config-fluid": "1.3.0",
-        "eslint-plugin-markdown": "1.0.0-beta.6",
-        "fluid-grunt-eslint": "18.1.2",
         "foundation-sites": "6.4.1",
-        "gpii-grunt-mdjson-lint": "1.0.0-dev.20171024T123903Z.3c91988",
+        "gpii-grunt-lint-all": "1.0.1-dev.20180706T153657Z.4cbbd61",
         "gpii-webdriver": "1.0.2",
-        "grunt": "1.0.2",
-        "grunt-jsonlint": "1.1.0",
-        "grunt-markdownlint": "1.1.6",
+        "grunt": "1.0.3",
         "istanbul": "0.4.5",
-        "kettle": "1.7.1",
+        "kettle": "1.7.3",
         "mkdirp": "0.5.1",
         "node-jqunit": "1.1.8",
         "recursive-copy": "2.0.9",
         "request": "2.87.0",
         "rimraf": "2.6.2",
         "selenium-webdriver": "4.0.0-alpha.1",
-        "tough-cookie": "2.3.4"
+        "tough-cookie": "2.4.3"
     }
 }
