--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "eslint-config-fluid": "1.3.0",
         "foundation-sites": "6.4.1",
         "gpii-grunt-lint-all": "1.0.1-dev.20180706T153657Z.4cbbd61",
-        "gpii-webdriver": "1.0.2",
+        "gpii-webdriver": "1.0.3-dev.20180316T104657Z.4a84a30",
         "grunt": "1.0.3",
         "istanbul": "0.4.5",
         "kettle": "1.7.3",
@@ -34,7 +34,6 @@
         "recursive-copy": "2.0.9",
         "request": "2.87.0",
         "rimraf": "2.6.2",
-        "selenium-webdriver": "4.0.0-alpha.1",
         "tough-cookie": "2.4.3"
     }
 }
