--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "eslint": "6.3.0",
         "eslint-config-fluid": "1.3.0",
         "gpii-grunt-lint-all": "1.0.5",
-        "gpii-testem": "2.1.9",
+        "gpii-testem": "2.1.10-dev.20190913T125312Z.87315e5.GPII-3457",
         "grunt": "1.0.4",
         "kettle": "1.11.0",
         "mkdirp": "0.5.1",
