--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gpii-handlebars",
-    "version": "2.1.0",
+    "version": "2.1.0-dev.20190923T144705Z.38550ff.GPII-4100",
     "private": false,
     "license": "BSD-3-Clause",
     "repository": "https://github.com/GPII/gpii-handlebars",
@@ -15,7 +15,7 @@
         "chokidar": "2.1.8",
         "gpii-binder": "1.0.5",
         "gpii-express": "1.0.15",
-        "handlebars": "4.2.0",
+        "handlebars": "4.3.1",
         "infusion": "3.0.0-dev.20190808T200426Z.ff8753d18.FLUID-6148",
         "json5": "2.1.0",
         "markdown-it": "10.0.0",
@@ -24,16 +24,16 @@
     },
     "devDependencies": {
         "cheerio": "1.0.0-rc.3",
-        "eslint": "6.3.0",
+        "eslint": "6.4.0",
         "eslint-config-fluid": "1.3.0",
         "gpii-grunt-lint-all": "1.0.5",
-        "gpii-testem": "2.1.10-dev.20190913T125312Z.87315e5.GPII-3457",
+        "gpii-testem": "2.1.10",
         "graceful-fs": "4.2.2",
         "grunt": "1.0.4",
         "kettle": "1.11.0",
         "mkdirp": "0.5.1",
         "node-jqunit": "1.1.8",
-        "nyc": "13.2.0",
+        "nyc": "14.1.1",
         "recursive-copy": "2.0.10",
         "request": "2.88.0",
         "rimraf": "3.0.0",
