--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gpii-handlebars",
-    "version": "2.1.0-dev.20190923T144705Z.38550ff.GPII-4100",
+    "version": "2.1.0",
     "private": false,
     "license": "BSD-3-Clause",
     "repository": "https://github.com/GPII/gpii-handlebars",
