--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
         "posttest": "node node_modules/nyc/bin/nyc.js report --reporter text-summary --reporter html"
     },
     "dependencies": {
-        "chokidar": "3.3.0",
-        "gpii-binder": "1.0.6",
+        "chokidar": "3.4.0",
+        "gpii-binder": "1.1.0",
         "gpii-express": "1.0.15",
-        "handlebars": "4.5.3",
-        "infusion": "3.0.0-dev.20191123T235705Z.4cd1b9d90.FLUID-6426",
-        "json5": "2.1.1",
+        "handlebars": "4.7.6",
+        "infusion": "3.0.0-dev.20200326T173810Z.24ddb2718",
+        "json5": "2.1.3",
         "markdown-it": "10.0.0",
         "md5": "2.2.1",
         "underscore-node": "0.1.2"
     },
     "devDependencies": {
         "cheerio": "1.0.0-rc.3",
-        "eslint": "6.7.1",
+        "eslint": "7.0.0",
         "eslint-config-fluid": "1.4.0",
-        "gpii-grunt-lint-all": "1.0.5",
+        "gpii-grunt-lint-all": "1.0.7",
         "gpii-testem": "2.1.11",
-        "graceful-fs": "4.2.3",
-        "grunt": "1.0.4",
-        "kettle": "1.11.0",
+        "graceful-fs": "4.2.4",
+        "grunt": "1.1.0",
+        "kettle": "1.12.0",
         "mkdirp": "0.5.1",
         "node-jqunit": "1.1.8",
         "nyc": "14.1.1",
         "recursive-copy": "2.0.10",
-        "request": "2.88.0",
-        "rimraf": "3.0.0",
-        "testem": "3.0.1",
-        "tough-cookie": "3.0.1"
+        "request": "2.88.2",
+        "rimraf": "3.0.2",
+        "testem": "3.1.0",
+        "tough-cookie": "4.0.0"
     }
 }
