--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "chokidar": "3.4.0",
-        "fluid-binder": "1.1.1-dev.20200708T095140Z.6ddf009.FLUID-6524",
+        "fluid-binder": "1.1.1",
         "fluid-express": "1.0.16",
         "handlebars": "4.7.6",
         "infusion": "3.0.0-dev.20200525T143422Z.f7f6aab.FLUID-6148",
@@ -27,7 +27,7 @@
         "eslint": "7.1.0",
         "eslint-config-fluid": "1.4.0",
         "fluid-grunt-lint-all": "1.0.8",
-        "fluid-testem": "2.1.13-dev.20200708T092513Z.7e90cc4.FLUID-6524",
+        "fluid-testem": "2.1.13",
         "graceful-fs": "4.2.4",
         "grunt": "1.1.0",
         "kettle": "1.12.0",
