--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "cheerio": "1.0.0-rc.3",
         "eslint": "7.1.0",
         "eslint-config-fluid": "1.4.0",
+        "eslint-plugin-markdown": "1.0.2",
         "fluid-grunt-lint-all": "1.0.8",
         "fluid-testem": "2.1.13",
         "graceful-fs": "4.2.4",
