--- a/package.json
+++ b/package.json
@@ -5,40 +5,38 @@
     "license": "BSD-3-Clause",
     "repository": "https://github.com/fluid-project/fluid-handlebars",
     "scripts": {
-        "pretest": "node node_modules/rimraf/bin.js coverage/* reports/*",
+        "lint": "fluid-lint-all",
+        "pretest": "npx rimraf coverage/* reports/*",
         "test": "npm run test:node && npm run test:browser",
-        "test:node": "node node_modules/nyc/bin/nyc.js node tests/js/server/all-server-tests.js",
+        "test:node": "nyc node tests/js/server/all-server-tests.js",
         "test:browser": "node node_modules/testem/testem.js ci --file tests/testem.js",
-        "posttest": "node node_modules/nyc/bin/nyc.js report --reporter text-summary --reporter html"
+        "posttest": "nyc report --reporter text-summary --reporter html"
     },
     "dependencies": {
-        "chokidar": "3.4.0",
+        "chokidar": "3.5.0",
         "fluid-binder": "1.1.1",
         "fluid-express": "1.0.16",
         "handlebars": "4.7.6",
-        "infusion": "3.0.0-dev.20200525T143422Z.f7f6aab.FLUID-6148",
+        "infusion": "3.0.0-dev.20201113T153152Z.32176dcbe.FLUID-6145",
         "json5": "2.1.3",
-        "markdown-it": "11.0.0",
-        "md5": "2.2.1",
+        "markdown-it": "12.0.4",
+        "md5": "2.3.0",
         "underscore-node": "0.1.2"
     },
     "devDependencies": {
         "cheerio": "1.0.0-rc.3",
-        "eslint": "7.1.0",
-        "eslint-config-fluid": "1.4.0",
-        "eslint-plugin-markdown": "1.0.2",
-        "fluid-grunt-lint-all": "1.0.8",
+        "eslint": "7.17.0",
+        "eslint-config-fluid": "2.0.0",
+        "fluid-lint-all": "1.0.0-dev.20210108T112637Z.3a60d59.GH-1",
         "fluid-testem": "2.1.13",
         "graceful-fs": "4.2.4",
-        "grunt": "1.1.0",
         "kettle": "1.12.0",
         "mkdirp": "1.0.4",
         "node-jqunit": "1.1.8",
         "nyc": "15.0.1",
-        "recursive-copy": "2.0.10",
+        "recursive-copy": "2.0.11",
         "request": "2.88.2",
-        "rimraf": "3.0.2",
-        "testem": "3.1.0",
+        "testem": "3.2.0",
         "tough-cookie": "4.0.0"
     }
 }
