--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Lint Code
-        run: $(npm bin)/grunt lint
+        run: $(npm bin)/fluid-lint-all
 
       - name: Node Tests
         run: xvfb-run --auto-servernum npm test
