--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     },
     "dependencies": {
         "chokidar": "3.5.0",
-        "fluid-binder": "1.1.1",
-        "fluid-express": "1.0.16",
+        "fluid-binder": "1.1.2",
+        "fluid-express": "1.0.17",
         "handlebars": "4.7.6",
         "infusion": "3.0.0-dev.20210114T211758Z.d345ecd74.FLUID-6145",
         "json5": "2.1.3",
@@ -27,8 +27,8 @@
         "cheerio": "1.0.0-rc.3",
         "eslint": "7.17.0",
         "eslint-config-fluid": "2.0.0",
-        "fluid-lint-all": "1.0.0-dev.20210108T112637Z.3a60d59.GH-1",
-        "fluid-testem": "2.1.13",
+        "fluid-lint-all": "1.0.0",
+        "fluid-testem": "2.1.14",
         "graceful-fs": "4.2.4",
         "kettle": "1.12.0",
         "mkdirp": "1.0.4",
